# hf-internal-interface-wrap

./: .clang-format  .clang-tidy  .clang-tidy-security  .gitignore  .gitmodules  .markdownlint.json  .yamllint  404.html  AdcComprehensiveTest_8cpp.html  AdcComprehensiveTest_8cpp.js  AdcComprehensiveTest_8cpp__incl.map  AdcComprehensiveTest_8cpp__incl.md5  ArmPil_mini.py  AsciiArtComprehensiveTest_8cpp.html  AsciiArtComprehensiveTest_8cpp.js  AsciiArtComprehensiveTest_8cpp__incl.map  AsciiArtComprehensiveTest_8cpp__incl.md5  AsciiArtGenerator_8cpp.html  AsciiArtGenerator_8cpp.js  AsciiArtGenerator_8cpp__incl.map  AsciiArtGenerator_8cpp__incl.md5  AsciiArtGenerator_8h.html  AsciiArtGenerator_8h.js  AsciiArtGenerator_8h__dep__incl.map  AsciiArtGenerator_8h__dep__incl.md5  AsciiArtGenerator_8h__incl.map  AsciiArtGenerator_8h__incl.md5  AsciiArtGenerator_8h_source.html  Async-example.html  BaseAdc_8h.html  BaseAdc_8h__dep__incl.map  BaseAdc_8h__dep__incl.md5  BaseAdc_8h__incl.map  BaseAdc_8h_source.html  BaseBluetooth_8h.html  BaseBluetooth_8h.js  BaseBluetooth_8h__dep__incl.map  BaseBluetooth_8h__dep__incl.md5  BaseBluetooth_8h__incl.map  BaseBluetooth_8h__incl.md5  (+1323 more)
development/: CMakeLists.txt  feed.xml  index.html  robots.txt  sitemap.xml  version_info.json
development/CONTRIBUTING/: index.html
development/api/: AdcComprehensiveTest_8cpp.html  AdcComprehensiveTest_8cpp__incl.map  AdcComprehensiveTest_8cpp__incl.md5  AsciiArtGenerator_8h.html  AsciiArtGenerator_8h_source.html  BaseBluetooth_8h__dep__incl.map  BaseBluetooth_8h__dep__incl.md5  BaseBluetooth_8h__incl.md5  BaseBluetooth_8h_source.html  BaseCan_8h__dep__incl.map  BaseCan_8h_source.html  BaseGpio_8h__dep__incl.md5  BaseGpio_8h__incl.md5  BaseI2c_8h__incl.map  BaseI2c_8h__incl.md5  BaseLogger_8h.html  BaseLogger_8h__dep__incl.map  BaseLogger_8h__dep__incl.md5  BaseLogger_8h_source.html  BaseNvs_8h_source.html  BasePeriodicTimer_8h.html  BasePeriodicTimer_8h__dep__incl.md5  BasePeriodicTimer_8h__incl.md5  BasePeriodicTimer_8h_source.html  BasePio_8h.html  BasePio_8h__incl.md5  BasePio_8h_source.html  BasePwm_8h__dep__incl.map  BasePwm_8h__dep__incl.md5  BasePwm_8h_source.html  BaseSpi_8h__dep__incl.map  BaseTemperature_8h.html  BaseTemperature_8h__dep__incl.map  BaseTemperature_8h__dep__incl.md5  BaseTemperature_8h__incl.map  BaseUart_8h.html  BaseUart_8h__dep__incl.map  BaseUart_8h__dep__incl.md5  BaseUart_8h__incl.md5  BaseUart_8h_source.html  (+666 more)
development/api/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_20.js  all_3.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_2.js  classes_4.js  classes_5.js  classes_8.js  classes_9.js  defines_0.js  defines_3.js  defines_7.js  enums_2.js  enums_3.js  enumvalues_12.js  enumvalues_2.js  enumvalues_4.js  enumvalues_b.js  enumvalues_c.js  enumvalues_f.js  files_d.js  (+38 more)
development/assets/js/: just-the-docs.js  search-data.json
development/docs/: doxygen-extensions.html  index.html
development/docs/api/: index.html
development/docs/esp_api/: index.html
development/docs/utils/: index.html
development/doxs/development/: AdcComprehensiveTest_8cpp.html  AdcComprehensiveTest_8cpp__incl.map  AsciiArtComprehensiveTest_8cpp.html  AsciiArtComprehensiveTest_8cpp__incl.map  AsciiArtGenerator_8cpp__incl.md5  AsciiArtGenerator_8h.html  BaseAdc_8h.js  BaseAdc_8h__dep__incl.map  BaseAdc_8h__dep__incl.md5  BaseAdc_8h__incl.md5  BaseBluetooth_8h.html  BaseBluetooth_8h_source.html  BaseCan_8h.html  BaseCan_8h__dep__incl.map  BaseCan_8h__dep__incl.md5  BaseCan_8h__incl.md5  BaseGpio_8h.js  BaseGpio_8h__dep__incl.map  BaseGpio_8h__incl.md5  BaseGpio_8h_source.html  BaseI2c_8h.html  BaseI2c_8h__dep__incl.map  BaseI2c_8h__dep__incl.md5  BaseLogger_8h.js  BaseLogger_8h__dep__incl.map  BaseLogger_8h__dep__incl.md5  BaseLogger_8h__incl.map  BaseNvs_8h.html  BaseNvs_8h__dep__incl.md5  BasePeriodicTimer_8h.html  BasePeriodicTimer_8h__dep__incl.map  BasePeriodicTimer_8h__incl.md5  BasePeriodicTimer_8h_source.html  BasePio_8h.html  BasePio_8h__dep__incl.map  BasePio_8h__incl.md5  BasePwm_8h__incl.md5  BaseSpi_8h.html  BaseSpi_8h__dep__incl.md5  BaseSpi_8h__incl.map  (+690 more)
development/examples/esp32/: CMakeLists.txt  index.html  sdkconfig
development/features/: index.html
examples/: BasicUsageExamples.cpp  CMakeLists.txt  CanUsageExample.cpp  DigitalGpioExample.cpp  DigitalOutputGuardExample.cpp  DigitalOutputGuardValidationExample.cpp  LazyInitExamples.cpp  McuPioExample.cpp  PwmUsageExample.cpp  esp32c6_nimble_test.cpp  memory_utils_test.cpp  pio_callback_example.cpp  temperature_sensor_example.cpp  wifi_bluetooth_example.cpp
examples/common/: DummyDevice.hpp
examples/esp32/: CMakeLists.txt  README.md  README_ADC_TESTING.md  README_BUILD_SYSTEM.md  README_CENTRALIZED_CONFIG.md  README_IDF_VERSIONS.md  README_NVS_TEST.md  README_TESTING_INFRASTRUCTURE.md  README_TESTS.md  app_config.yml  build_example.ps1  build_example.sh  examples_config.yml  fix_underscores.py  flash_example.ps1  flash_example.sh  pwm_example.cpp  requirements.txt  sdkconfig  sdkconfig.old  simple_test.sh  test_parsing.sh  test_pio_build.sh
examples/esp32/docs/: CI_CACHING_STRATEGY.md  ESP32_PIO_RMT_IMPROVEMENTS_SUMMARY.md  README.md  README_ADC_TEST.md  README_ADC_TESTING.md  README_ASCII_ART_TEST.md  README_BUILD_SYSTEM.md  README_CAN_TEST.md  README_DOG_TEST.md  README_GPIO_TEST.md  README_I2C_TEST.md  README_IDF_VERSION_MANAGEMENT.md  README_LOGGER_TEST.md  README_NVS_TEST.md  README_PIO_INTEGRATION.md  README_PIO_TEST.md  README_PWM_TEST.md  README_SPI_TEST.md  README_TEMPERATURE_TEST.md  README_UART_TESTING.md  README_WIFI_TEST.md  TIMER_TEST_REPORT.md
examples/esp32/logs/: .gitignore
examples/esp32/main/: AdcComprehensiveTest.cpp  AsciiArtComprehensiveTest.cpp  AsciiArtExample.cpp  BluetoothComprehensiveTest.cpp  CMakeLists.txt  CanComprehensiveTest.cpp  CommBusTests.cpp  CommBusTests.h  DummyTransport.h  (+29 more)
test/main/: CMakeLists.txt  test_esp_gpio_basic.cpp  test_main.cpp
(+5026 files in other folders)
