idf_component_register(
    SRCS
        src/BaseGpio.cpp
        src/DigitalExternalIRQ.cpp
        src/DigitalGpio.cpp
        src/DigitalInput.cpp
        src/DigitalOutput.cpp
        src/Esp32C6Adc.cpp
        src/FlexCan.cpp
        src/I2cBus.cpp
        src/SfSpiBus.cpp
        src/SfI2cBus.cpp
        src/SpiBus.cpp
        src/PwmOutput.cpp
        src/PeriodicTimer.cpp
        src/UartDriver.cpp
        src/DacOutput.cpp
    INCLUDE_DIRS "inc"
)
