idf_component_register(
    SRCS
        src/BaseGpio.cpp
        src/DigitalExternalIRQ.cpp
        src/DigitalGpio.cpp
        src/DigitalInput.cpp
        src/DigitalOutput.cpp
        src/Esp32C6Adc.cpp
        src/FlexCan.cpp
        src/SfFlexCan.cpp
        src/I2cBus.cpp
        src/SfSpiBus.cpp
        src/SfI2cBus.cpp
        src/SpiBus.cpp
        src/PwmOutput.cpp
        src/PeriodicTimer.cpp
        src/UartDriver.cpp
        src/SfUartDriver.cpp
        src/DacOutput.cpp
        src/RmtOutput.cpp
        src/NvsStorage.cpp
    INCLUDE_DIRS "inc"
)
